add em to navbar in index.html file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
+            <li><a href="#"> <em>Home</em></a></li>
+            <li><a href="#"> <em>About Me</em></a></li>
             <li><a href="#">Portfolio</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contacts</a></li>
