add strong to heading in index.html file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section id="home">
         <div class="main">
-            <h1 class="headings">I AM <br>ALEX WATURI</h1>
+            <h1 class="headings"> <strong>I Am</strong><br> <strong>ALEX WATURI</strong></h1>
             <button class="btn">
                 Hire me
 
