--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav class="navbar">
         <ul>
             <li><a href="#"> <em>Home</em></a></li>
             <li><a href="#"> <em>About Me</em></a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="#"> <em>Portfolio</em></a></li>
+            <li><a href="#"> <em>Services</em></a></li>
+            <li><a href="#"> <em>Contacts</em></a></li>
 
 
         </ul>
@@ -33,6 +35,7 @@
 
 
     </section>
-    
+
 </body>
+
 </html>
