add h2 in index.html file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <section id="home">
         <div class="main">
             <h1 class="headings"> <strong>I Am</strong><br> <strong>ALEX WATURI</strong></h1>
+            <h2>I am a software developer</h2>
             <button class="btn">
                 Hire me
 
