add about section in index.html file

--- a/index.html
+++ b/index.html
@@ -10,18 +10,15 @@
 </head>
 
 <body>
+    <header>
     <nav class="navbar">
         <ul>
-            <li><a href="#"> <em>Home</em></a></li>
-            <li><a href="#"> <em>About Me</em></a></li>
-            <li><a href="#"> <em>Portfolio</em></a></li>
-            <li><a href="#"> <em>Services</em></a></li>
-            <li><a href="#"> <em>Contacts</em></a></li>
-
-
+            <li><a href="#home"> <em>Home</em></a></li>
+            <li><a href="#about"><em>About Me</em></a></li>
+            <li><a href="#portfolio"> <em>Portfolio</em></a></li>
+            <li><a href="#service"> <em>Services</em></a></li>
+            <li><a href="#contact"> <em>Contacts</em></a></li>
         </ul>
-
-
     </nav>
     <section id="home">
         <div class="main">
@@ -29,11 +26,19 @@
             <h2>I am a software developer</h2>
             <button class="btn">
                 Hire me
-
             </button>
+        </div>
+    
+    </section>
+    </header>
+    <!-- about me -->
+    <section id="about">
+        <div >
+            <p>Iam a software developer <br>A website Designer <br> and a programmer</p>
 
         </div>
-
+    </section>
+    <section >
 
     </section>
 
