add a link of petwebsite to my portfolio in index.html file

--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
     <!-- about me -->
     <section id="about">
         <div >
-            <p>Iam a software developer <br>A website Designer <br> and a programmer</p>
+            <p>Iam a software developer <br>A website Designer <br> and a programmer <br>Currently am a student in Moringa School pursuing my course on Software Development</p>
 
         </div>
     </section>
-    <section >
+    <!-- Portfolio -->
+    <section id="portfolio">
+        <div>
+            <p><a href="https://xelousy.github.io/Petwebsite/">Welcome to my Portfolio</a></p>
+        </div>
 
     </section>
 
