style service in styles.css file

--- a/index.html
+++ b/index.html
@@ -11,30 +11,31 @@
 
 <body>
     <header>
-    <nav class="navbar">
-        <ul>
-            <li><a href="#home"> <em>Home</em></a></li>
-            <li><a href="#about"><em>About Me</em></a></li>
-            <li><a href="#portfolio"> <em>Portfolio</em></a></li>
-            <li><a href="#service"> <em>Services</em></a></li>
-            <li><a href="#contact"> <em>Contacts</em></a></li>
-        </ul>
-    </nav>
-    <section id="home">
-        <div class="main">
-            <h1 class="headings"> <strong>I Am</strong><br> <strong>ALEX WATURI</strong></h1>
-            <h2>I am a software developer</h2>
-            <button class="btn">
-                Hire me
-            </button>
-        </div>
-    
-    </section>
+        <nav class="navbar">
+            <ul>
+                <li><a href="#home"> <em>Home</em></a></li>
+                <li><a href="#about"><em>About Me</em></a></li>
+                <li><a href="#portfolio"> <em>Portfolio</em></a></li>
+                <li><a href="#service"> <em>Services</em></a></li>
+                <li><a href="#contact"> <em>Contacts</em></a></li>
+            </ul>
+        </nav>
+        <section id="home">
+            <div class="main">
+                <h1 class="headings"> <strong>I Am</strong><br> <strong>ALEX WATURI</strong></h1>
+                <h2>I am a software developer</h2>
+                <button class="btn">
+                    Hire me
+                </button>
+            </div>
+
+        </section>
     </header>
     <!-- about me -->
     <section id="about">
-        <div >
-            <p>Iam a software developer <br>A website Designer <br> and a programmer <br>Currently am a student in Moringa School pursuing my course on Software Development</p>
+        <div>
+            <p>Iam a software developer <br>A website Designer <br> and a programmer <br>Currently am a student in
+                Moringa School pursuing my course on Software Development</p>
 
         </div>
     </section>
@@ -42,6 +43,13 @@
     <section id="portfolio">
         <div>
             <p><a href="https://xelousy.github.io/Petwebsite/">Welcome to my Portfolio</a></p>
+        </div>
+
+    </section>
+    <!-- service -->
+    <section id="service">
+        <div>
+            <p>Consultancy</p>
         </div>
 
     </section>
