style contact on styles.css file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,14 @@
         </div>
 
     </section>
+    <!-- contact -->
+<section id="contact">
+    <div>
+     <p>alexwaturi1@gmail.com</p>
 
+    </div>
+
+</section>
 </body>
 
 </html>
