add content to about.html

--- a/about.html
+++ b/about.html
@@ -8,7 +8,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="about">
+        <div class="about">
+            <P class="text-center"> About me</P>
+            <p >Iam a software developer & website Designer </p>
+            <p>
+                Am a student in
+                Moringa School pursuing my course on Software Development <br>Was a student in Kenya Institute of
+                Management studying Business Management
+            </p>
+
+        </div>
+    </section>
     
 </body>
 </html>
