add span to services

--- a/service.html
+++ b/service.html
@@ -11,12 +11,22 @@
   
     <!-- service -->
     <section id="service">
-        <div>
-            <img src="" alt="">
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo aspernatur voluptate laboriosam beatae quae aperiam reiciendis quaerat inventore quasi molestias. Error voluptates amet iusto hic dolorem nam incidunt aliquam maxime!
+        <div class="box">
+            <div class="box-1">
+            <span>1</span>
+            <p class="heading">Software Development</p>
+            <p class="details">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque fuga cum perspiciatis pariatur, repellat doloribus quae, odit a fugiat iusto nostrum, maxime corrupti ipsa temporibus? Eius accusamus impedit pariatur? Odit.
             </p>
-            <p>Consultancy</p>
+            <img src="" alt="">
+           
+            </div>
+            <div  class="box-2">
+                <span>2</span>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, est earum quo nemo cum fugiat architecto commodi et, nam numquam aut, magni itaque? Beatae recusandae doloremque animi iste, quos reprehenderit!
+                </p>
+            </div>
         </div>
 </body>
 </html>
