--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,12 +18,13 @@
             <p class="details">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque fuga cum perspiciatis pariatur, repellat doloribus quae, odit a fugiat iusto nostrum, maxime corrupti ipsa temporibus? Eius accusamus impedit pariatur? Odit.
             </p>
-            <img src="" alt="">
+          
            
             </div>
             <div  class="box-2">
                 <span>2</span>
-                <p>
+                <p class="heading">Web Developer</p>
+                <p class="details">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, est earum quo nemo cum fugiat architecto commodi et, nam numquam aut, magni itaque? Beatae recusandae doloremque animi iste, quos reprehenderit!
                 </p>
             </div>
