--- a/service.html
+++ b/service.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,7 +17,7 @@
         <div class="box">
             <div class="box-1">
             <span>1</span>
-            <p class="heading">Software Development</p>
+            <p class="heading" style="position: relative;">Software Development</p>
             <p class="details">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque fuga cum perspiciatis pariatur, repellat doloribus quae, odit a fugiat iusto nostrum, maxime corrupti ipsa temporibus? Eius accusamus impedit pariatur? Odit.
             </p>
@@ -22,7 +25,7 @@
           
            
             </div>
-            <div  class="box-2">
+            <div  class="box-2" class="text-center">
                 <span>2</span>
                 <p class="heading ">Web Developer</p>
                 <p class="details">
