added image to contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- contact -->
     <section id="contact">
@@ -17,10 +19,18 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
 
 
+            <div class="image">
+                <img src="/images/contacts.jpg" alt="">
+
+
+            </div>
+
+
             <p>alexwaturi1@gmail.com</p>
 
         </div>
 
     </section>
 </body>
+
 </html>
