--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
         <section id="home">
             <div class="main">
-                <h1 class="headings"> <strong>I Am</strong><br> <strong>ALEX WATURI</strong></h1>
+                <h1 class="headings"> <strong>I am</strong><br> <strong></strong>ALEX WATURI</strong></h1>
                 <h2>I am a software developer</h2>
                 <a class="main" href="https://xelousy.github.io/Petwebsite/"> <button>My Pet</button> </a>
             </div>
